--- a/package.json
+++ b/package.json
@@ -11,12 +11,21 @@
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.23.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2016": "^6.22.0",
+    "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babelify": "^7.3.0",
     "browserify-css": "^0.10.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "underscore": "^1.8.3"
+  },
+  "dependencies": {
+    "aphrodite": "^1.1.0",
+    "classnames": "^2.2.5",
+    "material-ui": "^0.17.0",
+    "react-tap-event-plugin": "^2.0.1",
+    "react-toolbox": "^2.0.0-beta.6"
   }
 }
