--- a/package.json
+++ b/package.json
@@ -1,31 +1,23 @@
 {
-  "name": "rhcp",
+  "name": "batcave",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/idreyn/batcave.git"
+  },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "babel-cli": "^6.23.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-es2016": "^6.22.0",
-    "babel-preset-latest": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
-    "babelify": "^7.3.0",
-    "browserify-css": "^0.10.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "underscore": "^1.8.3"
+  "bugs": {
+    "url": "https://github.com/idreyn/batcave/issues"
   },
+  "homepage": "https://github.com/idreyn/batcave#readme",
   "dependencies": {
-    "aphrodite": "^1.1.0",
-    "classnames": "^2.2.5",
-    "material-ui": "^0.17.0",
-    "react-tap-event-plugin": "^2.0.1",
-    "react-toolbox": "^2.0.0-beta.6"
+    "express": "^4.15.2",
+    "socket.io": "^1.7.3"
   }
 }
