--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/idreyn/batcave#readme",
   "dependencies": {
+    "audio-resampler": "^1.0.1",
     "express": "^4.15.2",
     "ip": "^1.1.5",
     "socket.io": "^1.7.3",
