--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,12 @@
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babelify": "^7.3.0",
+    "browserify": "^14.3.0",
     "browserify-css": "^0.10.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "watchify": "^3.9.0"
   },
   "dependencies": {
     "aphrodite": "^1.1.0",
